build: Releasing version 380