@@ -27,15 +27,12 @@ import java.util.List;
 
 import javax.inject.Inject;
 
-import com.google.common.collect.ImmutableList;
-
 import io.trino.spi.HostAddress;
 import io.trino.spi.connector.ConnectorSession;
 import io.trino.spi.connector.ConnectorSplitManager;
 import io.trino.spi.connector.ConnectorSplitSource;
 import io.trino.spi.connector.ConnectorTableHandle;
 import io.trino.spi.connector.ConnectorTransactionHandle;
-import io.trino.spi.connector.Constraint;
 import io.trino.spi.connector.DynamicFilter;
 import io.trino.spi.connector.FixedSplitSource;
 
@@ -48,16 +45,10 @@ public class RediSearchSplitManager implements ConnectorSplitManager {
 		this.addresses = session.getAddresses();
 	}
 
-    @Override
-    public ConnectorSplitSource getSplits(
-            ConnectorTransactionHandle transaction,
-            ConnectorSession session,
-            ConnectorTableHandle tableHandle,
-            DynamicFilter dynamicFilter,
-            Constraint constraint)
-    {
+	@Override
+	public ConnectorSplitSource getSplits(ConnectorTransactionHandle transaction, ConnectorSession session,
+			ConnectorTableHandle table, SplitSchedulingStrategy splitSchedulingStrategy, DynamicFilter dynamicFilter) {
 		RediSearchSplit split = new RediSearchSplit(addresses);
-
-		return new FixedSplitSource(ImmutableList.of(split));
+		return new FixedSplitSource(List.of(split));
 	}
 }
